# airborne

./: .gitignore  .gitmodules  .gitmodules_ro  .gitmodules_rw  CMakeLists.txt  README.md  example.bashrc  gitsub_init.sh  install_scripts.sh  make_pushable.sh  push_all.sh  run_offline.sh
ARCADE/: CMakeLists.txt  README.md  header.c
ARCADE/airborne/: CMakeLists.txt
ARCADE/airborne/common/: CMakeLists.txt
ARCADE/airborne/common/config/: blackbox.xml  parameters-base.yaml  parameters-overlay.yaml  services.yaml  sys_params_base.yaml  system.yaml  system.yaml~
ARCADE/airborne/common/messages/: .core.proto.swp  CMakeLists.txt  aircomm.proto  arbiter.proto  cal.proto  config.proto  core.proto  ferry.proto  gps_data.proto  health.proto  icarus.proto  imms_sensor_data.proto  kalman.proto  log_data.proto  monitor_data.proto  networks.proto  param.proto  power.proto  state_update.proto
ARCADE/airborne/common/scripts/: bashrc
ARCADE/airborne/common/util/: CMakeLists.txt  arbiter_interface.py  arbiter_requests.py  core_interface.py  icarus_client.py  icarus_interface.py  misc.py  mission.py  mtputil.py  named_daemon.py  paths.py  state_map.py  state_reader.py  test.py  timeutil.py
ARCADE/airborne/common/util/daemon/: daemon.c  daemon.h  pidfile.c
ARCADE/airborne/common/util/opcd_params/: CMakeLists.txt  opcd_interface.py  opcd_params.c  opcd_params.h
ARCADE/airborne/common/util/serial/: CMakeLists.txt  serial.c
ARCADE/airborne/common/util/threads/: periodic_thread.c  simple_thread.c  simple_thread.h  thread_config.h  thread_realtime.h  threadsafe_types.h
ARCADE/airborne/components/: CMakeLists.txt  README.md
ARCADE/airborne/components/aircomm/: aircomm_server.py  calltest.py  calltest.py~  config.ini  config.yaml  config.yaml~  heartbeat.py  heartbeat.py~  interface.py  interface.py~  messageClass.py  messageClass.py~  rout.py~  routing_table.py~  send_recv1.py  send_recv1.py~  send_recv2.py  send_recv2.py~  send_recv3.py  send_recv3.py~  sender.py  sender.py~  test.py  test.py~  zmqsubscriber.py  zmqsubscriber.py~  zmqsubscriber2.py  zmqsubscriber2.py~
ARCADE/airborne/components/aircomm/ed_nrf/: listen_raw.py  listen_raw.py~  send_raw.py  send_recv.py~
ARCADE/airborne/components/app_chat/: chat.py  chat.py~  test.py  test.py~
ARCADE/airborne/components/app_heartbeat/: heartbeat.py  heartbeat.py~
ARCADE/airborne/components/app_recvCommand/: recv_command.py  recv_command.py~
ARCADE/airborne/components/arbiter/doc/: arbiter.odg
ARCADE/airborne/components/arbiter/src/: CMakeLists.txt  arbiter.py  dispatcher.py  flight_manager.py  mission_list.py
ARCADE/airborne/components/cal_server/: cal_server.py
ARCADE/airborne/components/confserver/: config-base.yml  config-overlay.yml  config.py  confserver.py  confshell.py
ARCADE/airborne/components/core/: CMakeLists.txt  README.md  calpub.c  calpub.h  core.sh  flight_detect.c  flight_detect.h  main.c  main.h  motostate.c  motostate.h
ARCADE/airborne/components/core/behaviors/: CMakeLists.txt  landing.c  landing.h
ARCADE/airborne/components/core/command/: actions.c  actions.h  command.c
ARCADE/airborne/components/core/config/: chr-6dm.conf  core.conf
ARCADE/airborne/components/core/control/: CMakeLists.txt  control.c  control.h  controller.h  ctrl.h  navi.c  xy_speed.c  xy_speed.h  yaw_ctrl.c
ARCADE/airborne/components/core/estimators/: CMakeLists.txt  ahrs.c  ahrs.h  pos.c  pos.h
ARCADE/airborne/components/core/filters/: CMakeLists.txt  average.c  average.h  filter.c  filter.h  kalman.c  kalman.h  lowhi.c  lowhi.h  median_filter.c  median_filter.h  sliding_avg.c  sliding_avg.h  sliding_var.c  sliding_var.h
ARCADE/airborne/components/core/geometry/: CMakeLists.txt  earth.c  earth.h  orientation.c  orientation.h  rot2d.c  rot2d.h  vector3d.c
ARCADE/airborne/components/core/hardware/: CMakeLists.txt
ARCADE/airborne/components/core/main_loop/: CMakeLists.txt  main_loop.c  main_loop.h  main_realtime.c  main_realtime.h  main_replay.c  main_replay.h  main_util.c  main_util.h
ARCADE/airborne/components/core/model/: CMakeLists.txt  adams4.c  adams4.h  madgwick_ahrs.c  madgwick_ahrs.h  marg_data.h  model.c  model.h  util.c
ARCADE/airborne/components/core/platform/: CMakeLists.txt  arcade_quadro.c  arcade_quadro.h  channel_map.c  channel_map.h  coupling.c  coupling.h  drotek_marg.c  drotek_marg.h  drotek_marg2.c  drotek_marg2.h  inv_coupling.c  inv_coupling.h  platform.c  platform.h  quadro.c  quadro.h
ARCADE/airborne/components/core/sigproc/: CMakeLists.txt  flight_detect.c  flight_detect.h
ARCADE/airborne/components/core/src/: CMakeLists.txt  main.c
ARCADE/airborne/components/core/state/: CMakeLists.txt  flight_state.c  flight_state.h  motors_state.c  motors_state.h
ARCADE/airborne/components/core/util/: CMakeLists.txt
ARCADE/airborne/components/icarus/: event_handler.py  flight_manager.py  icarus.py  landing_spots.py  power.py
ARCADE/airborne/components/icarus/activities/: activities.py  activity.py  dummy.py  land.py  move.py  stop.py  takeoff.py
ARCADE/airborne/components/interfaces/: CMakeLists.txt
ARCADE/airborne/components/old_aircomm/: aircomm_server.py  aircomm_server01.py  aircomm_server01.py~  send_recv1.py~
ARCADE/airborne/components/opcd/: CMakeLists.txt  config.py  config_protocol.py  confshell.py  opcd.py
ARCADE/airborne/components/powerman/: README.md  hardware.py  powerman.py
ARCADE/airborne/components/routing/: batman.py  batman.py~  batman_old.py  config.yaml  config.yaml~  createmsg.py  createmsg.py~  forwarder.py  forwarder.py~  lookup.py  lookup.py~  lookup_test.py  lookup_test.py~  msg_processor.py  msg_processor.py~  network_layer.py  network_layer.py~  receiver.py  receiver.py~  rout.py  rout.py~  start_batman.py  start_batman.py~  storage.py  storage.py~  testAppLayer.py  testAppLayer.py~  testPub_sub.py  testPub_sub.py~  test_access_variables.py~  testyaml.py  testyaml.py~  testzmq.py  testzmq.py~
ARCADE/airborne/components/sensors/: CMakeLists.txt
ARCADE/airborne/components/signaling/: signaling.py
ARCADE/airborne/util/: read_voltage_adc7.py
(+460 files in other folders)
