
FIND_PACKAGE(Glib REQUIRED)
FIND_PACKAGE(PythonLibrary REQUIRED)
INCLUDE(PythonMacros)

# binary includes:
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/common/messages)

# source includes:
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common/util)


IF (EXISTS ${CMAKE_TOOLCHAIN_FILE})
   INCLUDE(${CMAKE_TOOLCHAIN_FILE})
ENDIF (EXISTS ${CMAKE_TOOLCHAIN_FILE})
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -std=gnu99")


ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY($ENV{MOBICOM_SUBPROJECT_NAME})
