
# binary includes:
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../common/src/messages)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/common/messages)

# binary includes:
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common/util/threads)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common/util/opcd_params)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common/util/daemon)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common/util/serial)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/src/util)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../common/scl/src)

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(components)
