ADD_SUBDIRECTORY(rc_dsl)
ADD_SUBDIRECTORY(rc_dsl_reader)
ADD_SUBDIRECTORY(maxsonar)
ADD_SUBDIRECTORY(maxsonar_reader)
ADD_SUBDIRECTORY(holger_blmc)
ADD_SUBDIRECTORY(bma180)
ADD_SUBDIRECTORY(ms5611)
ADD_SUBDIRECTORY(ms5611_reader)
ADD_SUBDIRECTORY(hmc5883)
ADD_SUBDIRECTORY(itg3200)
ADD_SUBDIRECTORY(mpu6050)
ADD_SUBDIRECTORY(scl_voltage)
ADD_SUBDIRECTORY(scl_gps)
ADD_SUBDIRECTORY(i2cxl)
ADD_SUBDIRECTORY(i2cxl_reader)
